--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.1",
         "axios": "^0.21",
+        "bootstrap": "^5.1.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.41.0",
+        "sass-loader": "^12.1.0"
     }
 }
