--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.1",
-        "axios": "^0.21",
-        "bootstrap": "^5.1.1",
+        "axios": "^0.27",
+        "bootstrap": "^5.2.0-beta1",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "resolve-url-loader": "^4.0.0",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.41.0",
-        "sass-loader": "^12.1.0"
+        "sass-loader": "^13.0.0"
     }
 }
