--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=55a29a2044c5d0fdd041",
-    "/css/app.css": "/css/app.css?id=4d8225cb433974800bb8"
+    "/js/app.js": "/js/app.js?id=a67381ecca09a1cbacef46b4b567c32d",
+    "/css/app.css": "/css/app.css?id=4332d966a677682968d3ada9018b50ea"
 }
